# apps/wanaku-barn-backend/src/main/webui/openapi.yaml
@@ -1125,10 +1125,20 @@ paths:
         in: query
         schema:
           type: string
+      - name: limit
+        in: query
+        schema:
+          type: integer
+          format: int32
       - name: name
         in: query
         schema:
           type: string
+      - name: offset
+        in: query
+        schema:
+          type: integer
+          format: int32
       responses:
         "200":
           description: OK
@@ -1698,6 +1708,16 @@ paths:
   /api/v1/service-catalog:
     get:
       parameters:
+      - name: limit
+        in: query
+        schema:
+          type: integer
+          format: int32
+      - name: offset
+        in: query
+        schema:
+          type: integer
+          format: int32
       - name: search
         in: query
         schema:
@@ -1871,6 +1891,14 @@ paths:
         required: true
         schema:
           type: string
+      - name: from
+        in: query
+        schema:
+          type: string
+      - name: to
+        in: query
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -2041,6 +2069,16 @@ paths:
   /api/v1/service-template/list:
     get:
       parameters:
+      - name: limit
+        in: query
+        schema:
+          type: integer
+          format: int32
+      - name: offset
+        in: query
+        schema:
+          type: integer
+          format: int32
       - name: search
         in: query
         schema:
@@ -2144,7 +2182,15 @@ paths:
   /api/v1/service-template/versions:
     get:
       parameters:
+      - name: from
+        in: query
+        schema:
+          type: string
       - name: name
+        in: query
+        schema:
+          type: string
+      - name: to
         in: query
         schema:
           type: string
